--- a/src/app/pages/renovatie/renovatie.component.html
+++ b/src/app/pages/renovatie/renovatie.component.html
@@ -1,2 +1,2 @@
-<!-- <app-image-background [styles]="{height:'30vh'}"></app-image-background> -->
+<app-image-background [styles]="{height:'35vh'}"></app-image-background>
 <app-video-tekst></app-video-tekst>
