--- a/src/app/components/counter-blocks/counter-blocks.component.html
+++ b/src/app/components/counter-blocks/counter-blocks.component.html
@@ -5,7 +5,7 @@
             <div>
                 <h3>Panden <span>{{clientcount}}</span></h3>
             </div>
-            <img src="../../../assets/panden.svg" alt="">
+            <img src="/assets/panden.svg" alt="">
         </div>
         <hr>
         <div class="counter-block-second">
@@ -13,12 +13,12 @@
             <div>
                 <h3><span>{{projectcount}}</span> ㎡  </h3>
             </div>
-            <img src="../../../assets/m2.svg" alt="">
+            <img src="/assets/m2.svg" alt="image">
         </div>     
     </div>
     <div class="counter-block-third">
         <h6>Huidige Aanbod</h6>
-        <img src="../../../assets/arrow-btn-large-right.svg" alt="">
+        <img src="/assets/arrow-btn-large-right.svg" alt="">
     </div>
     <hr class="second-hr">
 </div>
