--- a/src/app/components/counter-blocks/counter-blocks.component.html
+++ b/src/app/components/counter-blocks/counter-blocks.component.html
@@ -13,7 +13,7 @@
             <div>
                 <h3><span>{{projectcount}}</span> ㎡  </h3>
             </div>
-            <img src="assets/m2.svg" alt="image">
+            <img src="assets/m2.svg" alt="">
         </div>     
     </div>
     <div class="counter-block-third">
