--- a/src/app/components/front-blocks/front-blocks.component.html
+++ b/src/app/components/front-blocks/front-blocks.component.html
@@ -1,3 +1,4 @@
+<div class="block">
 <div class="block-container">
 <div class="block-whole" *ngFor="let block of blocks" routerLink="/{{ block.link }}"  >
     <div class="block-whole-first" >
@@ -7,5 +8,6 @@
         <h4>{{ block.title }}</h4>
         <img src="assets/arrow-btn-large-right.svg" alt="">
     </div>
+</div>
 </div>
 </div>
