--- a/src/app/components/header-new-new/header-new-new.component.html
+++ b/src/app/components/header-new-new/header-new-new.component.html
@@ -31,7 +31,7 @@
                             </ul>
                         </div>
                     </li>
-                  <li class="nav-link" style="--i: 1.35s">
+                  <li (click)="toAbout()" class="nav-link" style="--i: 1.35s">
                     <!-- (click)="scrollToElement(target)" -->
                         <a>OVER<i class="fas fa-caret-down"></i></a>
                     </li>
