--- a/src/app/components/image-tekst/image-tekst.component.html
+++ b/src/app/components/image-tekst/image-tekst.component.html
@@ -1,4 +1,4 @@
-<div class="image-tekst-container" >
+<div id="over" class="image-tekst-container" >
     <div class="image-tekst-first" > 
         <img class="oscar-foto" src="assets/imgplaceholder.svg" alt="">
         <img class="masterclass" src="assets/masterclass.svg" alt="">
