--- a/src/app/components/front-blocks/front-blocks.component.scss
+++ b/src/app/components/front-blocks/front-blocks.component.scss
@@ -1,10 +1,17 @@
+.block {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
 .block-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: auto;
-
-    margin-top: -350px;
+    position: absolute;
+    top: 70%; left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .block-whole {
