--- a/src/app/components/header-new-new/header-new-new.component.scss
+++ b/src/app/components/header-new-new/header-new-new.component.scss
@@ -22,8 +22,7 @@ header{
     width: 100%;
     z-index: 3;
     transition: 0.5s ease-in-out;
-    -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08); 
-    box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08);
+
     
 }
 
@@ -92,7 +91,7 @@ section{
 
 .nav-link > a{
     line-height: 3rem;
-    color: #081539;
+    color: #FFFFFF;
     padding: 0 1.1rem;
     display: flex;
     align-items: center;
