--- a/src/app/components/image-background/image-background.component.scss
+++ b/src/app/components/image-background/image-background.component.scss
@@ -1,11 +1,28 @@
 img {
     width: 100%;
-    height: 60vh;
-    margin-top: -100px;
+    height: 100vh;
     top: 0px;
+    left: 0px;
     object-fit: cover;
-    position: relative;
-    opacity: 0.6;
+    position: absolute;
+    opacity: 1;
     z-index: -1;
 }
 
+.shadow {
+width: 100%;
+height: 100vh;
+top: 0px;
+left: 0px;
+position: absolute;
+opacity: 0.2;
+z-index: 0;
+background-color: #000000;
+transition: 0.5s ease-in-out;
+}
+
+.background_change {
+    opacity: 0.6;
+    transition: 1s ease-in-out;
+    z-index:2;
+}
