--- a/src/app/components/splash-screen/splash-screen.component.html
+++ b/src/app/components/splash-screen/splash-screen.component.html
@@ -7,7 +7,7 @@
     <div class="app-logo"></div>
     <div class="app-label">                
       <h2>OSR</h2>
-      <p><span style="--i: .5s">Real Estate |</span><span style="--i: 1.0s">   Advisory | </span><span style="--i: 1.5s">Investments</span></p></div>
+      <p><span style="--i: .5s">Real Estate |</span><span style="--i: 1.0s">  s Advisory | </span><span style="--i: 1.5s">Investments</span></p></div>
     <div class="app-loader"></div>
   </div>
 </div> 
