--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header-new-new></app-header-new-new>
-<splash-screen></splash-screen>
+<!-- <splash-screen></splash-screen> -->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
