--- a/src/app/components/splash-screen/splash-screen.component.html
+++ b/src/app/components/splash-screen/splash-screen.component.html
@@ -6,8 +6,7 @@
   <div class="app-splash-inner">
     <div class="app-logo"></div>
     <div class="app-label">                
-      <h2>OSR</h2>
-      <p><span style="--i: .5s">Real Estate |</span><span style="--i: 1.0s">  s Advisory | </span><span style="--i: 1.5s">Investments</span></p></div>
+      <ng-lottie [options]="options" (animationCreated)="animationCreated($event)"></ng-lottie>
     <div class="app-loader"></div>
   </div>
 </div> 
