--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,7 @@ h1 {
 
 h2 {
     font-size: 40px; 
-    color: #081539;
+    color: #ffffff;
     font-weight: bold;
     margin: 2px;
 }
@@ -42,7 +42,7 @@ h3 {
 }
 
 h4 {
-    font-size: 20px; 
+    font-size: 16px; 
     color: #ffffff;
     font-weight: bold;
     margin: 2px;
