--- a/src/app/components/header-new-new/header-new-new.component.scss
+++ b/src/app/components/header-new-new/header-new-new.component.scss
@@ -27,7 +27,7 @@ header{
 }
 
 .header_change {
-    background-color: rgba(255, 255, 255, 1);
+    background-color: #313131;
     transition: 0.5s ease-in-out;
     -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08); 
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08);
@@ -142,7 +142,7 @@ section{
 }
 
 .dropdown-link:hover > a{
-    background-color: #1B2545;;
+    background-color: #F0E2D7;;
     color: #fff;
 }
 
@@ -205,7 +205,7 @@ section{
     width: 1.6rem;
     height: 3px;
     border-radius: 3px;
-    background-color:#081539 ;
+    background-color:#ffffff ;
     position: relative;
     z-index: 1001;
     transition: .5s;
@@ -217,7 +217,7 @@ section{
     position: absolute;
     width: inherit;
     height: inherit;
-    background-color: #081539;
+    background-color: #ffffff;
     border-radius: 3px;
     transition: .5s;
 }
