--- a/src/app/components/image-tekst/image-tekst.component.html
+++ b/src/app/components/image-tekst/image-tekst.component.html
@@ -1,6 +1,6 @@
 <div id="over" class="image-tekst-container" >
     <div class="image-tekst-first" > 
-        <img class="oscar-foto" src="assets/imgplaceholder.svg" alt="">
+        <img class="oscar-foto" src="assets/Foto_Oscar.jpg" alt="">
         <img class="masterclass" src="assets/masterclass.svg" alt="">
     </div>
     <div class="image-tekst-second" >
@@ -13,8 +13,8 @@
                 It has survived not only five centuries, but also the leap into electronic typesetting.</p>
         </div>
         <div class="image-tekst-buttons">
-            <button class="btn-large-other">Oscarvdmark@gmail.com</button>
-            <button class="btn-large-other">+31 6 123 456 78</button>
+            <button class="btn-large-other">info@osr-realestate.nl</button>
+            <button class="btn-large-other">+31 6 41 55 02 27</button>
 
         </div>
     </div>
