--- a/src/app/pages/renovatie/renovatie.component.html
+++ b/src/app/pages/renovatie/renovatie.component.html
@@ -1,2 +1,2 @@
-<app-image-background [styles]="{height:'35vh'}"></app-image-background>
+<app-image-background-animation [title]="'Renovatie & Transformatie'" [styles]="{height:'40vh'}"></app-image-background-animation>
 <app-video-tekst></app-video-tekst>
