--- a/src/app/components/header-new-new/header-new-new.component.scss
+++ b/src/app/components/header-new-new/header-new-new.component.scss
@@ -130,7 +130,7 @@ section{
 
 .dropdown-link > a{
     display: flex;
-    background-color: #081539;
+    background-color: rgba(26, 26, 26, 0.6); 
     color: #ffffff;;
     padding: .5rem 1rem;
     font-size: .9rem;
@@ -139,11 +139,12 @@ section{
     transition: .3s;
     border-radius: 5px;
     margin-bottom: 2px;
+
 }
 
 .dropdown-link:hover > a{
-    background-color: #F0E2D7;;
-    color: #fff;
+    background-color: rgba(26, 26, 26, 1); ;
+    color: #ffffff;
 }
 
 
@@ -259,7 +260,9 @@ section{
 
 
 .diensten{
-    margin-left:5px;
+    margin-left:0px;
+    margin-top: 5px;
+    margin-right: -10px;
   }
 
 .nav-active {
@@ -292,7 +295,7 @@ section{
         top: 0rem;
         left: 0;
         width: 100%;
-        background-color: #081539 ;
+        background-color: #2b2b2b ;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
@@ -334,7 +337,7 @@ section{
 
     .nav-link:hover > a{
         transform: scale(1);
-        background-color: #293661;
+        background-color: #585858;
     }
 
     .dropdown, .dropdown.second{
@@ -346,7 +349,7 @@ section{
         pointer-events: auto;
         width: 100%;
         padding: 0;
-        background-color: #1B2545;
+        background-color: #444444;
         display: none;
     }
     
@@ -381,14 +384,14 @@ section{
 
     .arrow{
         z-index: 1;
-        background-color: #1B2545;
+        background-color: #3a3a3a;
         left: 10%;
         transform: scale(1.1) rotate(45deg);
         transition: .5s;
     }
 
     .nav-link:hover .arrow{
-        background-color: #1B2545;
+        background-color: #3a3a3a;
     }
 
     .dropdown .dropdown .arrow{
@@ -396,7 +399,7 @@ section{
     }
 
     .dropdown-link:hover > a{
-        background-color: #1B2545;
+        background-color: #3a3a3a;
     }
 
     .dropdown-link:first-child:hover ~ .arrow{
@@ -428,6 +431,7 @@ section{
         font-size: 40px; 
         font-weight: bold;
     }
+ 
 
 
 }
