--- a/src/app/components/image-background-animation/image-background-animation.component.html
+++ b/src/app/components/image-background-animation/image-background-animation.component.html
@@ -1,4 +1,5 @@
-<div>
-    <img [ngStyle]="styles" src="assets/Image 4.png" alt="">
-    <h1></h1>
+<div class="image-background">
+    <img [ngStyle]="styles" src="assets/chandeleer.png" alt="">
+    <div class="shadow"></div>
+    <h1> {{ title }}</h1>
 </div>
