--- a/src/app/components/image-background-animation/image-background-animation.component.scss
+++ b/src/app/components/image-background-animation/image-background-animation.component.scss
@@ -1,3 +1,7 @@
+.image-background {
+  position: relative;
+}
+
 img {
   width: 100%;
   height: 40vh;
@@ -9,3 +13,24 @@ img {
   z-index: -1;
 }
 
+.shadow {
+  width: 100%;
+  height: 40vh;
+  margin-top: -100px;
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  opacity: 0.4;
+  z-index: 0;
+  background-color: #000000;
+  transition: 0.6s ease-in-out;
+}
+
+.image-background h1 {
+  position: absolute;
+  bottom: 30px;
+  left: 100px;
+  width: 400px;
+  line-height: 50px;
+
+}
