--- a/src/app/components/image-tekst/image-tekst.component.scss
+++ b/src/app/components/image-tekst/image-tekst.component.scss
@@ -5,6 +5,29 @@
     width: 90%;
     margin-bottom: 100px;
 }
+.oscar-foto{
+    width: 300px;
+    height: 340px;
+    object-fit: cover;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+    -webkit-transition: 0.5s -webkit-filter linear;
+    -moz-transition: 0.5s -moz-filter linear;
+    -moz-transition: 0.5s filter linear;
+    -ms-transition: 0.5s -ms-filter linear;
+    -o-transition: 0.5s -o-filter linear;
+    transition: 0.5s filter linear, 1s -webkit-filter linear;
+}
+
+.oscar-foto:hover {
+    filter:none;
+    -webkit-transition: 0.5s -webkit-filter linear;
+    -moz-transition: 0.5s -moz-filter linear;
+    -moz-transition: 0.5s filter linear;
+    -ms-transition: 0.5s -ms-filter linear; 
+    -o-transition: 0.5s -o-filter linear;
+    transition: 0,5s filter linear, 1s -webkit-filter linear;
+}
 
 .image-tekst-first {
     position: relative;
@@ -45,13 +68,7 @@
     margin-bottom: 10px
 }
 
-.oscar-foto {
-    object-fit:inherit;
-    width: 100%;
-    border-radius: 5px;
-    max-width: 375px;
-    max-height: 400px;
-}
+
 
 .masterclass  {
    position: absolute;
@@ -83,6 +100,11 @@
     .image-tekst-container {
         margin-bottom: 140px;
         max-width: 1100px;
+    }
+
+    .oscar-foto{
+        width: 375px;
+        height: 400px;
     }
 
     .image-tekst-container {
