--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ body {
 
 h1 {
     font-size: 30px; 
-    color: #081539;
+    color: #ffffff;
     letter-spacing: -1px;
     font-weight: bold;
     margin: 2px;
@@ -92,8 +92,9 @@ li {
     border-radius: 4px;
     letter-spacing: -0.2px;
     font-weight: bold;
-    color: #ffffff !important;
-    background-color: #1B2545;
+    color: #272727 !important;
+    background-color: #F0E2D7;
+    font-size: 11px;
     transition: transform .2s ease-in-out;
     cursor: pointer;
      -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08); 
@@ -108,8 +109,8 @@ li {
     border-radius: 4px;
     letter-spacing: -0.2px;
     font-weight: bold;
-    color: #ffffff;
-    background-color: #1B2545;
+    color: #272727;
+    background-color: #F0E2D7;
     transition: transform .2s ease-in-out;
     cursor: pointer;
     -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08); 
@@ -124,8 +125,8 @@ li {
     border-radius: 4px;
     letter-spacing: -0.2px;
     font-weight: bold;
-    color: #ffffff;
-    background-color: #1B2545;
+    color: #272727;
+    background-color: #F0E2D7;
     transition: transform .2s ease-in-out;
     cursor: pointer;
     -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.08); 
@@ -136,10 +137,10 @@ li {
     transform: translate3d(0px, -2px, 0px);
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 820px) {
 
 h1 {
-    font-size: 60px; 
+    font-size: 50px; 
 }
 
 }
