--- a/src/app/components/video-tekst/video-tekst.component.html
+++ b/src/app/components/video-tekst/video-tekst.component.html
@@ -1,21 +1,18 @@
-<div class="image-tekst-container" >
-    <div class="image-tekst-first" > 
+<div class="video-tekst-container" >
+    <div class="video-tekst-first" > 
         <iframe width="420" height="315"
-        src="https://www.youtube.com/embed/tgbNymZ7vqY">
+        src="{{ video }}">
         </iframe>
     </div>
-    <div class="image-tekst-second" >
-        <div class="image-tekst-second-text">
-            <p>OVER</p>
-            <h5>OSR <span>| Real Estate | Advisory | Investments </span></h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, 
-                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+    <div class="video-tekst-second" >
+        <div class="video-tekst-second-text">
+            <p>{{title}}</p>
+            <h5>OSR <span></span></h5>
+            <p>{{ paragraph }}</p>
         </div>
-        <div class="image-tekst-buttons">
-            <button class="btn-large-other">Oscarvdmark@gmail.com</button>
-            <button class="btn-large-other">+31 6 123 456 78</button>
+        <div class="video-tekst-buttons">
+            <button class="btn-large-other">info@osr-realestate.nl</button>
+            <button class="btn-large-other">+31 6 41 55 02 27</button>
         </div>
     </div>
 </div>
