--- a/src/app/components/video-tekst/video-tekst.component.scss
+++ b/src/app/components/video-tekst/video-tekst.component.scss
@@ -1,4 +1,4 @@
-.image-tekst-container {
+.video-tekst-container {
     display: flex;
     flex-direction: column;
     margin:auto;
@@ -6,12 +6,19 @@
     margin-bottom: 100px;
 }
 
-iframe {
-    width: 120%;
-    margin: auto;
+.video-tekst-first {
+
 }
 
-.image-tekst-second {
+iframe {
+    width: 100%;
+    margin: auto;
+    border-style: none;
+    border-radius: 10px;
+    background-color: green;
+}
+
+.video-tekst-second {
     text-align:initial;
     margin-top: 30px;
     max-width: 400px;
@@ -19,33 +26,33 @@ iframe {
     
 }
 
-.image-tekst-second-text {
+.video-tekst-second-text {
     background-color: #F8F8F8;
     padding: 20px;
     border-radius: 5px;
 
 }
 
-.image-tekst-second-text span {
+.video-tekst-second-text span {
     font-size: 14px;
     font-weight: 600;
     
 }
 
-.image-tekst-buttons {
+.video-tekst-buttons {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
 }
 
-.image-tekst-buttons button {
+.video-tekst-buttons button {
     margin-right: auto;
     margin-bottom: 10px
 }
 
 @media only screen and (min-width: 500px) {
 
-    .image-tekst-buttons {
+    .video-tekst-buttons {
         margin-top: 20px;
         display: flex;
         flex-direction: row;
@@ -53,7 +60,7 @@ iframe {
      
     }
     
-    .image-tekst-buttons button {
+    .video-tekst-buttons button {
         margin-right: auto;
         margin-bottom: 10px;
         
@@ -63,12 +70,12 @@ iframe {
 
 @media only screen and (min-width: 800px) {
     
-    .image-tekst-container {
+    .video-tekst-container {
         margin-bottom: 140px;
         max-width: 1100px;
     }
 
-    .image-tekst-container {
+    .video-tekst-container {
         flex-direction: row;
     }
 
