--- a/src/app/components/video-tekst/video-tekst.component.html
+++ b/src/app/components/video-tekst/video-tekst.component.html
@@ -1,13 +1,13 @@
 <div class="video-tekst-container" >
     <div class="video-tekst-first" > 
-        <iframe width="420" height="315"
-        src="{{ video }}">
+        <iframe 
+        src="http://www.youtube.com/embed/W7qWa52k-nE">
         </iframe>
     </div>
     <div class="video-tekst-second" >
         <div class="video-tekst-second-text">
-            <p>{{title}}</p>
-            <h5>OSR <span></span></h5>
+            <p class="p-klein">over</p>
+            <h5>{{title}}<span></span></h5>
             <p>{{ paragraph }}</p>
         </div>
         <div class="video-tekst-buttons">
