--- a/src/app/pages/advies/advies.component.html
+++ b/src/app/pages/advies/advies.component.html
@@ -1,1 +1,17 @@
-<!-- <app-image-background [styles]="{height:'65vh'}"></app-image-background> -->
+<app-image-background-animation 
+    [title]="'Advies'" 
+    [styles]="{height:'40vh'}"
+    >
+</app-image-background-animation>
+<app-video-tekst 
+    [title]="'Advies'"
+    [paragraph]="'
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                It has survived not only five centuries, but also the leap into electronic typesetting.
+                '"
+    [video]="'https://www.youtube.com/watch?v=uD_usH85xB0&t=122s&ab_channel=RealEstateMasterclass'"
+
+    >
+</app-video-tekst>
