--- a/src/app/pages/renovatie/renovatie.component.html
+++ b/src/app/pages/renovatie/renovatie.component.html
@@ -1,2 +1,17 @@
-<app-image-background-animation [title]="'Renovatie & Transformatie'" [styles]="{height:'40vh'}"></app-image-background-animation>
-<app-video-tekst></app-video-tekst>
+<app-image-background-animation 
+    [title]="'Renovatie & Transformatie'" 
+    [styles]="{height:'40vh'}"
+    >
+</app-image-background-animation>
+<app-video-tekst 
+    [title]="'Renovatie & Transformatie'"
+    [paragraph]="'
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                It has survived not only five centuries, but also the leap into electronic typesetting.
+                '"
+    
+
+    >
+</app-video-tekst>
