--- a/src/app/pages/verkoop/verkoop.component.html
+++ b/src/app/pages/verkoop/verkoop.component.html
@@ -1,1 +1,6 @@
-<p>verkoop works!</p>
+<app-image-background-animation 
+    [title]="'Aan & Verkoop'" 
+    [styles]="{height:'40vh'}"
+    ></app-image-background-animation> 
+<app-house-detail-new></app-house-detail-new>
+
