--- a/src/app/components/house-detail-new/house-detail-new.component.scss
+++ b/src/app/components/house-detail-new/house-detail-new.component.scss
@@ -10,6 +10,7 @@
 .house-detail-first img {
     width: 100%;
     border-radius: 10px 10px 0px 0px;
+    object-fit: cover;
 }
 
 .house-detail-second {
@@ -39,30 +40,39 @@
     .house-detail-container {
         flex-direction: row-reverse;
         max-width: 1100px;
+        align-items: center;
+        
     }
 
     .house-detail-first img {
-        width: 100%;
         border-radius: 10px;
+    }
+
+    .house-detail-first {
+        width: 40%;
     }
 
     .house-detail-second {
         border-radius: 10px;
         padding: 30px;
-        max-width: 500px;
+        width: 60%;
         margin-right: 20px;
     }
     
 
 }
 
-@media only screen and (min-width: 1150px) {
+@media only screen and (min-width: 1100px) {
 
-    .house-detail-first img  {
-        max-height: 450px;
-        max-width: 350px;
+    .house-detail-first img {
+        border-radius: 10px;
+        max-height: 400px;
+    }
 
-        
+    .house-detail-container {
+        flex-direction: row-reverse;
+        max-width: 1050px;
+        align-items: center;
     }
 
 }
