--- a/src/app/components/counter-blocks/counter-blocks.component.html
+++ b/src/app/components/counter-blocks/counter-blocks.component.html
@@ -16,7 +16,7 @@
             <img src="assets/m2.svg" alt="">
         </div>     
     </div>
-    <div class="counter-block-third">
+    <div routerLink="/verkoop" class="counter-block-third">
         <h6>Huidige Aanbod</h6>
         <img src="assets/arrow-btn-large-right.svg" alt="">
     </div>
