--- a/src/app/components/counter-blocks/counter-blocks.component.scss
+++ b/src/app/components/counter-blocks/counter-blocks.component.scss
@@ -20,6 +20,12 @@
     margin-top: 30px;
     justify-content: space-between;
     width: 170px;
+    cursor: pointer;
+}
+
+.counter-block-third:hover img {
+    transform: translate3d(2px, 0px, 0px);
+    transition: transform .2s ease-in-out;
 }
 
 .second-hr {
@@ -37,9 +43,7 @@
     cursor: pointer;
 }
 
-.counter-block-third img:hover { 
-    transform: translate3d(2px, 0px, 0px);
-}
+
 
 
 @media only screen and (min-width: 700px) { 
