--- a/src/app/components/header-new-new/header-new-new.component.html
+++ b/src/app/components/header-new-new/header-new-new.component.html
@@ -4,6 +4,7 @@
 
         <div class="logo-container">
             <h2 routerLink="/">OSR</h2>
+            <!-- <p class="tekst-logo" [class.tekst_change]="header_variable">Real Estate | Advisory | Investments</p> -->
 
         </div>
 
