--- a/src/app/pages/verkoop/verkoop-details/verkoop-details.component.html
+++ b/src/app/pages/verkoop/verkoop-details/verkoop-details.component.html
@@ -1,1 +1,4 @@
-<p>verkoop-details works!</p>
+<app-image-background-animation 
+    [title]="" 
+    [styles]="{height:'40vh'}"
+    ></app-image-background-animation> 
