--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header-new-new></app-header-new-new>
-<splash-screen></splash-screen>
-<router-outlet></router-outlet>
+<!-- <splash-screen></splash-screen> -->
+<main role="main" [@fadeAnimation]="outlet.isActivated ? outlet.activatedRoute : ''">
+    <router-outlet #outlet="outlet"></router-outlet>
+  </main>
 <app-footer></app-footer>
