--- a/src/app/components/front-blocks/front-blocks.component.html
+++ b/src/app/components/front-blocks/front-blocks.component.html
@@ -1,11 +1,11 @@
 <div class="block">
 <div class="block-container">
-<div class="block-whole" *ngFor="let block of blocks" routerLink="/{{ block.link }}"  >
-    <div class="block-whole-first" >
+<div id="block-whole" class="block-whole" *ngFor="let block of blocks" routerLink="/{{ block.link }}"  >
+    <div id="block-whole-first" class="block-whole-first" >
         <img class="image-small" src="{{ block.img }}" alt="">
         <img class="image-groot" src="{{ block.imgGroot }}" alt="">
     </div>
-    <div class="block-whole-second">
+    <div id="block-whole-second" class="block-whole-second">
         <h4>{{ block.title }}</h4>
         <img src="assets/arrow-btn-large-right.svg" alt="">
     </div>
