--- a/src/app/components/video-tekst/video-tekst.component.scss
+++ b/src/app/components/video-tekst/video-tekst.component.scss
@@ -79,24 +79,18 @@ h5 {
 
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 900px) {
     
     .video-tekst-container {
         margin-bottom: 140px;
         max-width: 1100px;
+        flex-direction: row;
+        align-items: center;
     }
 
-    .video-tekst-container {
-        flex-direction: row;
-    }
 
     .video-tekst-first {
-        margin-top: 10px;
-    }
-
-    iframe {
-        width: 600px;
-
+        margin-top: 0px;
     }
 
     .video-tekst-first {
