--- a/src/app/components/house-detail-new/house-detail-new.component.scss
+++ b/src/app/components/house-detail-new/house-detail-new.component.scss
@@ -34,6 +34,12 @@
     font-weight:400;
 }
 
+.house-detail-second h5{
+    margin-top: -5px;
+    margin-bottom: 5px;
+    line-height: 25px;
+}
+
 .house-detail-buttons {
     display: flex;
     align-content: center;
