--- a/src/app/components/counter-blocks/counter-blocks.component.html
+++ b/src/app/components/counter-blocks/counter-blocks.component.html
@@ -1,4 +1,4 @@
-<div class="counter-block-container">
+<div (scroll)="projectcountstop($event)" class="counter-block-container">
     <div class="counter-block">
         <div class="counter-block-first">
             <h6>Huidige portefeuille</h6>
