--- a/src/app/components/header-new-new/header-new-new.component.html
+++ b/src/app/components/header-new-new/header-new-new.component.html
@@ -36,7 +36,7 @@
                     <!-- (click)="scrollToElement(target)" -->
                         <a>OVER<i class="fas fa-caret-down"></i></a>
                     </li>
-                    <li  class="nav-link" style="--i: 1.6s"><a href="#" class="btn-large">CONTACT<i class="fas fa-caret-down"></i></a>
+                    <li  class="nav-link" style="--i: 1.6s"><a href="#" class="btn-large">UW VASTGOED VERKOPEN?<i class="fas fa-caret-down"></i></a>
                     </li>
                 </ul>
             </div>
@@ -48,4 +48,5 @@
             </div>
         </div>
     </div>
+    <app-pop-up></app-pop-up>
 </header>
