--- a/src/app/components/front-blocks/front-blocks.component.scss
+++ b/src/app/components/front-blocks/front-blocks.component.scss
@@ -67,6 +67,10 @@
     display: none;
 }
 
+.lottie {
+    position:absolute;
+}
+
 @media only screen and (min-width: 800px) {
 
     .block-whole {
